--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,35 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#1E3A8A" />
+
+  <!-- Primary Meta Tags -->
+  <title>Lone Star Statuary | Handcrafted Classical Sculptures & Custom Commissions</title>
+  <meta name="title" content="Lone Star Statuary | Handcrafted Classical Sculptures & Custom Commissions">
+  <meta name="description"
+    content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces. Texas-based artisans, nationwide shipping.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lonestarstatuary.com/">
+  <meta property="og:title" content="Lone Star Statuary | Handcrafted Classical Sculptures">
+  <meta property="og:description"
+    content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces.">
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://lonestarstatuary.com/">
+  <meta property="twitter:title" content="Lone Star Statuary | Handcrafted Classical Sculptures">
+  <meta property="twitter:description"
+    content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces.">
+  <meta property="twitter:image" content="%PUBLIC_URL%/og-image.jpg">
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="keywords"
+    content="classical sculptures, Greek statues, Roman statues, marble sculptures, custom statues, art commissions, Texas sculptors, decorative statuary, classical art, cast marble">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Lone Star Statuary">
+  <meta name="geo.region" content="US-TX">
+
+  <!-- Preconnect to known domains -->
+  <link rel="preconnect" href="https://lonestarstatuary.com">
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!-- Schema.org markup for Google -->
+  <script type="application/ld+json">
+ {
+   "@context": "https://schema.org",
+   "@type": "Store",
+   "name": "Lone Star Statuary",
+   "description": "Handcrafted classical sculptures and custom commissions in cast marble",
+   "image": "%PUBLIC_URL%/og-image.jpg",
+   "url": "https://lonestarstatuary.com",
+   "telephone": "",
+   "address": {
+     "@type": "PostalAddress",
+     "addressCountry": "US",
+     "addressRegion": "TX"
+   },
+   "geo": {
+     "@type": "GeoCoordinates"
+   },
+   "priceRange": "$$",
+   "openingHoursSpecification": {
+     "@type": "OpeningHoursSpecification",
+     "dayOfWeek": [
+       "Monday",
+       "Tuesday",
+       "Wednesday",
+       "Thursday",
+       "Friday"
+     ]
+   },
+   "sameAs": [
+     "",
+     "",
+     ""
+   ]
+ }
+ </script>
+</head>
+
+<body>
+  <noscript>
+    <h1>Lone Star Statuary - Classical Sculptures and Custom Commissions</h1>
+    <p>Please enable JavaScript to explore our collection of handcrafted classical sculptures and custom statuary
+      commissions.</p>
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +97,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
