--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,7 +9,7 @@
 
   <!-- Primary Meta Tags -->
   <title>Lone Star Statuary | Handcrafted Classical Sculptures & Custom Commissions</title>
-  <meta name="title" content="Lone Star Statuary | Handcrafted Classical Sculptures & Custom Commissions">
+  <meta name="title" content="Lone Star Statuary">
   <meta name="description"
     content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces. Texas-based artisans, nationwide shipping.">
 
