--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#1E3A8A" />
 
   <!-- Primary Meta Tags -->
-  <title>Lone Star Statuary | Handcrafted Classical Sculptures & Custom Commissions</title>
+  <title>Lone Star Statuary</title>
   <meta name="title" content="Lone Star Statuary">
   <meta name="description"
     content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces. Texas-based artisans, nationwide shipping.">
