remove non-existing file paths

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -19,7 +19,7 @@
   <meta property="og:title" content="Lone Star Statuary | Handcrafted Classical Sculptures">
   <meta property="og:description"
     content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces.">
-  <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
+  <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
   <meta property="twitter:title" content="Lone Star Statuary | Handcrafted Classical Sculptures">
   <meta property="twitter:description"
     content="Discover exquisite cast marble sculptures inspired by classical Greek and Roman art. Shop our collection of handcrafted statues or commission custom pieces.">
-  <meta property="twitter:image" content="%PUBLIC_URL%/og-image.jpg">
+  <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png">
 
   <!-- Additional SEO Meta Tags -->
   <meta name="keywords"
@@ -49,7 +49,7 @@
    "@type": "Store",
    "name": "Lone Star Statuary",
    "description": "Handcrafted classical sculptures and custom commissions in cast marble",
-   "image": "%PUBLIC_URL%/og-image.jpg",
+   "image": "%PUBLIC_URL%/logo192.png",
    "url": "https://lonestarstatuary.com",
    "telephone": "",
    "address": {
